--- a/UPlans/UPlans/Main.resx
+++ b/UPlans/UPlans/Main.resx
@@ -300,4 +300,80 @@
         SUVORK5CYII=
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAOgDAADoAwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA8Yv4AO2H+Az1j/hg9Y/4ZPGL+CTlf+gA6YPsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAPGL+AD5k/gA9Y/5XPWP+1z1j/t09Y/67PWP+kD1j/mM9Y/47PWP+HDxi/gg5X/oAOmD7AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA8Yv4APGL+Cj1j/rw9Y/7wPWP+yT1j/uY9Y/75PWP+/z1j/vY9Y/7ePWP+uz1j
+        /pA9Y/5bPGL9Ez1j/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAPGL+ADth/gI9Y/4jPWP+Tj1j/mU9Y/6GPWP+7z1j/rA8Yv4RPWP+Iz1j/kQ9Y/5rPWP+lz1j
+        /sA9Y/7iPWP+9z1j/v09Y/6RPGL/Az1j/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADxi/gA8Yv4EPWP+bD1j/uA9Y/79PWP+/j1j/v09Y/7vPWP+Zz5k/gA8Yv4AAAAAADth
+        /AA6YPsBPGL+Cj1j/h89Y/5HPWP+3D1j/so8Yv4PPGL+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAPWP+AD1j/j89Y/7uPWP+1z1j/oA9Y/5fPWP+TTxi/TU9Y/4IPWP+AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAPGL/ADxi/wo9Y/7CPWP+2Txi/Rc8Yv0AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9Y/4APWP+cj1j/v09Y/5ZPWP+ADth/QAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8Yv0AO2H8BD1j/rA9Y/7oPWP+JD1j/gAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPGL+AD1j/gA9Y/59PWP+/D1j/kg9Y/4AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxi/gA/Zf4APWP+jz1j/vg8Yv5APWP+AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9Y/4APWP+BT1j/q09Y/7rPWP+Kz1j
+        /gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD1j/gA9Y/5iPWP+/z1j
+        /nA9Y/4APGL+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxi/QA8Yv0UPWP+0z1j
+        /sg8Yv4NPGL+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPWP+AD1j
+        /i49Y/7sPWP+sz1j/gk9Y/4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8Yv0AO2H9Az1j
+        /mA9Y/7yPWP+yzxi/RA8Yv0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA8Yv0APGL9CD1j/q49Y/7zPWP+RD1j/gA7Yf0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD1j
+        /gA9Y/47PWP+6z1j/vM9Y/6nPGL9Djxi/QAAAAAAAAAAAAAAAAA8Yv0APGL9AT1j/hU9Y/4HPWP+ADth
+        /AA3XfQAPGL+Djxi/jRFaf8APWP+TD1j/vY9Y/6sPGP+Cjxj/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAPWP+AD1j/l09Y/7/PWP+mTxi/Q08Yv0APWP+AAAAAAAAAAAAAAAAADxi/gA6YP4CPWP+iD1j
+        /nJTa/8APWP+GD1j/nw9Y/6MPWP+kTlg/gE8Yv4JPWP+qT1j/vY9Y/5NPWP+ADti/gAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA9Y/4APWP+Jz1j/to9Y/7jPWP+PD1j/gA8Yv8AAAAAAAAAAAAAAAAAPGL+AD1j
+        /gA9Y/4zPWP+wj1j/jA8Yv8FPWP+cj1j/vI9Y/65PWP+LD1j/gA9Y/4+PWP+8D1j/q88Yv0IPGL9AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADxj/gA+ZP4APWP+WD1j/vI9Y/7BPWP+Fj1j/gAAAAAAPWP+AD1j
+        /hA9Y/4QPWP+AEZr/gA9Y/6LPWP+ez1j/gA9Y/5XPWP+nz1j/l09Y/40PWP+ADxi/gg9Y/6yPWP+6z1j
+        /i09Y/4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxi/gA8Yv4EPWP+jT1j/v09Y/5bPWP+AD1j
+        /i49Y/5GPWP+jj1j/lE9Y/4APWP+AD1j/lU9Y/6lOmD8Ajxi/Rg8Yv4ZPGL9AAAAAAA8Yv4APWP+AD1j
+        /nc9Y/79PWP+VD1j/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD1j/gA9Y/5bPWP+/z1j
+        /ns9Y/4APWP+PT1j/sk9Y/7uPWP+ZT1j/gQ9Y/4APWP+Qj1j/rE9Y/8JPWP+AAAAAAAAAAAAAAAAAAAA
+        AAA9Y/4APWP+YT1j/v09Y/5kPWP+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8Y/8APWP+AD1j
+        /oA9Y/7/PWP+Wj1j/gA8Yv8GPWP+pj1j/qU9Y/6OPWP+FD1j/gA8Yv5IPWP+rj1j/gc9Y/4APGL+Ajxi
+        /gw9Y/8BPWP/AD1j/gA9Y/5tPWP+/j1j/ls9Y/4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxj
+        /wA9Y/4APWP+gj1j/v49Y/5QPWP+AD1j/wc9Y/5NPWP+Ez1i/gM9Yv0BPWP+AD1j/m49Y/6VPGL9DTxi
+        /TY9Y/5IPWP+gz1j/gU8Y/4AR239AD1j/pQ9Y/72PWP+PD1j/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAD1j/gA9Y/5fPWP+/z1j/oA+ZP4APGL+AAAAAAA8Y/8APWP+AD1j/jM9Y/4xPWP+qT1j
+        /lc9Y/4XPWP+qj1j/uU9Y/6UPGL9CDxi/gA8Yv4ZPWP+0z1j/tM8Y/4XPGP+AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAPWP+AD1j/io9Y/7nPWP+xz1j/hM9Y/4AAAAAADxj/wA9Y/4APWP+fj1j
+        /sY9Y/6tPWP+FD1j/gA9Y/5aPWP+0j1j/qk9Y/5BPWP+AD1j/m49Y/79PWP+g0Np/gA8Yv4AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8Yv4APGL+BD1j/p09Y/78PWP+Zz5k/gA9Y/4AAAAAAD1j
+        /gA9Y/5sPWP+/z1j/s09Y/5APWP+AD1j/kY9Y/5KPGL+Cjxi/Qc9Y/46PWP+4T1j/to9Y/4nPWP+AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9Y/4APWP+ND1j/uI9Y/7gPWP+P0Bm
+        /wA7Yf0APWP+AD1j/iI9Y/5aPWP+Rz1j/hc9Y/4AOF75AEVr/wA5X/8BPWP+QD1j/tM9Y/7yPWP+XT9k
+        /gA8Y/4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxi/wBfhdwAPWP+Yj1j
+        /vI9Y/7cPWP+WDxi/Qo9Y/4AOmD7AAAAAAAAAAAAAAAAADxi/gA7Yf4BPGL+Gj1j/nk9Y/7nPWP+8D1j
+        /m88Yv4EPGL+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADxi
+        /gA7Yv4EPWP+Zj1j/ug9Y/73PWP+sz1j/mA9Y/4xPWP+HTxi/Rs9Y/4oPWP+SD1j/oc9Y/7UPWP+/T1j
+        /tU9Y/5WO2H9BDxi/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADxi/QA7YfwCPWP+PT1j/rE9Y/70PWP+/j1j/vE9Y/7jPWP+4T1j/us9Y/76PWP+/T1j
+        /ts9Y/6FPWP+Iv///wA7Yf0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADpg+wA9Y/4APGL+Cz1j/j49Y/59PWP+qj1j/rk9Y/65PWP+sT1j
+        /ow9Y/5VPWP+Hjth/gI8Yv4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOV/6ADdd+AA8Yv0DPWP+BT1j
+        /gU8Yv0EOmD7ATpg+wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////8P////AH///gAP/+AAB//APAf/wD+H/8f/h//H/8f/h/
+        /H/4f/w/8H/8P/B8ch/w/EAf8P4BD/hzIQ/4QweP/EEfj/xBEY/8QQGP/HwBD/w8IR/8PCAf/hw4P/8H
+        4D//AAB//4AB///gA////B////////////8=
+</value>
+  </data>
 </root>
